* Hook up Value classes testing properly. (#5294)
* Hook up Value classes testing properly
* Various minor edits to copyrights and such.
* Use a test style that will allow us to compare with javac mode better